fix: footer gap with main content

--- a/css/board.css
+++ b/css/board.css
@@ -10,14 +10,14 @@ body {
   align-items: center;
   background-color: #d9dadc;
 
-  height:100%;
+  height: 100%;
 
   /*background-image: url(../imgs/pageBackground2.png); */
   /* background-size: cover; */
 }
 
 main {
-  padding-top:30px;
+  padding-top: 30px;
   position: relative;
   overflow: hidden;
   width: 80%;
@@ -42,9 +42,9 @@ main {
 }
 
 .center {
-  padding-top:30px;
+  padding-top: 30px;
   width: 1050px;
-  height:700px;
+  height: 700px;
   /* width: auto; */
   /* align-self: end; */
   margin: auto;
@@ -479,7 +479,7 @@ footer {
   margin: auto;
   top: 0;
   bottom: 0;
-  padding-top: 3%;
+  padding-top: 15px;
 }
 
 .weather {
